# live-bootcamp-project

./: .gitignore  Cargo.toml  compose.yml  devenv.nix
auth-service/: Cargo.toml  api_schema.yml
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email_client.rs  error.rs  mod.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  hashset_banned_token_store.rs  mock_email_client.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
