[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
