[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.7.4"
axum-extra = { version = "0.9.6", features = ["cookie"] }
chrono = "0.4.42"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
lazy_static = "1.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = "0.20.0"

[dev-dependencies]
fake = "=2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = { version = "0.12.23", default-features = false, features = ["cookies", "json"] }
